--- a/src/components/Campus/Campus.css
+++ b/src/components/Campus/Campus.css
@@ -13,3 +13,18 @@
         }
     }
 }
+
+/* ----------media query --------- */
+
+@media (max-width: 800px){
+    .campus .gallery{
+        flex-wrap: wrap;
+        img{
+            width: 48%;
+            margin-bottom: 25px;
+        }
+    }
+    
+    
+}
+
